[package]
name = "forest-ds"
description = "Implementation of a secure tree structure."
repository = "https://github.com/joshuachp/forest-ds"
keywords = ["data-structures", "trees"]
categories = ["data-structures"]
version = "1.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
serde = { version = "1.0.152", optional = true }
thiserror = "1.0.38"

[dev-dependencies]
criterion = "0.4.0"
serde_json = "1.0.93"
pretty_assertions = "1.3.0"

[[bench]]
name = "tree_benchmark"
harness = false

[[example]]
name = "serialize"
required-features = ["serde"]
