[package]
name = "forest-ds"
version = "1.1.6"
categories = ["data-structures"]
edition = "2021"
keywords = ["data-structures", "trees"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshuachp/forest-ds"
description = "Implementation of a secure tree structure."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
serde = { version = "1.0.164", optional = true }
thiserror = "1.0.40"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.3.0"
serde_json = "1.0.99"

[[bench]]
name = "tree_benchmark"
harness = false

[[example]]
name = "serialize"
required-features = ["serde"]
