[package]
name = "forest-ds"
version = "1.1.7"
categories = ["data-structures"]
edition = "2021"
keywords = ["data-structures", "trees"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshuachp/forest-ds"
description = "Implementation of a secure tree structure."
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
serde = { version = "1", optional = true }
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1.4.0"
serde_json = "1.0.105"

[[example]]
name = "serialize"
required-features = ["serde"]
